[package]
name = "artworks"
version = "0.2.0"
edition = "2021"
description = "Embed album covers to audio files"
license = "GPL-3.0"
repository = "https://github.com/mrtnvgr/artworks/"
keywords = ["audio", "covers", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.3.16", features = ["derive"] }
indicatif = "0.17.5"
lofty = "0.15.0"
walkdir = "2.3.3"

[profile.release]
strip = true
